[package]
name = "sample_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
midi_player = { git = "https://github.com/bombpersons/midi_player.git" }
midly = "0.5.2"
wav = "1.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
rubato = "0.12.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"